# Helix

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/agents/: architect.md  backend-dev.md  frontend-dev.md  qa.md
.claude/memory/: helix-context.md  helix-project-memory.md
backend/: README.md  pyproject.toml
backend/src/helix/: config.py  main.py
backend/src/helix/adapters/: base.py
backend/src/helix/api/: __init__.py  chat.py  config.py  models.py  monitor.py
docs/: index.html
docs/assets/: anthropic.css
docs/specs/: 2026-04-28-helix-design.md
frontend/: package.json
frontend/src/: App.tsx  index.css
